--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.25.0",
     "dayjs": "^1.11.1",
     "env-cmd": "^10.1.0",
+    "eslint": "^8.22.0",
     "ethers": "^5.5.2",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
