--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "env-cmd": "^10.1.0",
     "ethers": "^5.5.2",
     "graphql": "^16.4.0",
+    "needle": "^3.1.0",
+    "octokit": "^2.0.7",
     "pluralize": "^8.0.0",
     "pocp-service-sdk": "6.1.6",
     "react": "^17.0.2",
