--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@epnsproject/frontend-sdk-staging": "^1.8.5",
     "@ethersproject/providers": "^5.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@supabase/supabase-js": "^1.35.6",
@@ -24,7 +25,7 @@
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
@@ -34,6 +35,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.50.1",
+    "styled-components": "^5.3.5",
     "urql": "^2.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
