--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@truffle/hdwallet-provider": "^2.0.14",
     "@uauth/js": "^2.3.0",
     "@uauth/web3-react": "^2.2.0",
     "@web3-react/core": "^6.1.9",
@@ -39,7 +40,8 @@
     "urql": "^2.2.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
-    "web3": "^1.7.3"
+    "web3": "^1.7.5",
+    "web3.storage": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
