--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "styled-components": "^5.3.5",
     "urql": "^2.2.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.7.5",
-    "web3.storage": "4.0.0"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
