--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/styled": "^11.10.4",
     "@epnsproject/frontend-sdk-staging": "^1.8.5",
     "@ethersproject/providers": "^5.7.0",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.5",
     "@reduxjs/toolkit": "^1.7.1",
     "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.11.4",
@@ -25,6 +28,7 @@
     "octokit": "^2.0.7",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
+    "react-digraph": "^8.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
     "react-lottie": "^1.2.3",
@@ -32,6 +36,7 @@
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.2",
+    "react-uuid": "^1.0.3",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
