--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
+    "@xmtp/xmtp-js": "^6.3.2",
     "antd": "^4.18.0",
     "axios": "^0.25.0",
     "dayjs": "^1.11.1",
