--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:prod": "env-cmd -f .env.production react-scripts start"
   },
   "browserslist": {
     "production": [
